--- a/index.html
+++ b/index.html
@@ -2,18 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>UAVs Bitstarter :: v 0.57 ::</title>
+    <title>UAVs Bitstarter :: v 0.58 ::</title>
     <!-- todo1 responsive design -->
     <!-- todo2 async flow control -->
     <!-- -->
     <!-- if you reed source code, you will find everything in the comments -->    
     <!-- -->
-    <!-- -->
     <!-- fyi the bitcoin address last seen during testing -->
-    <!-- -->
+    <!-- will become obsolete with planned api calls for realtime accurate data -->
     <!-- http://blockexplorer.com/address/139H9TpgZY9Y199NNaz8ZgZQ9oi7JeCrdr -->
     <!-- https://blockchain.info/address/139H9TpgZY9Y199NNaz8ZgZQ9oi7JeCrdr -->
-    <!-- actually found https://coinbase.com/api/doc -->
+    <!-- https://coinbase.com/api/doc -->
     <!-- -->
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css">
@@ -23,7 +22,7 @@
     <link href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" rel="stylesheet">
     <link href="https://d396qusza40orc.cloudfron.net/startup%2Fcode%2Fsocial-buttons.css" rel="stylesheet">
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
-    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script><!-- 056 how could I've missed this one? -->
+    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
     <style type="text/css">
 
     /* large desktop */
@@ -130,7 +129,7 @@
   					<span class="icon-bar"></span>
   					<span class="icon-bar"></span>
   				</button>
-  				<a class="brand" href="#">Bitstarter</a>
+  				<a class="brand" href="#">UAV Bitstarter</a>
   				<div class="nav-collapse collapse">
   					<ul class="nav">
   						<li class="active"><a href="#">Home</a></li>
@@ -219,13 +218,15 @@
   		</div>
   		<div class="span5 copy">
   			<p>
+          (*) actually only me, testing at debugging</p>
+          <p>
   				Known errors (nearterm todo items):<br>
   		<!-- branch later to develop api / async flow stuff -->
  				<i>2. static donations status</i> (I've figured out how to make tracking bitcoin dynamic)<br>
 				<i>3. not a real fundraising page.</i> Current site's purpose is to pass the Coursera class titled "Startup engineering".<br>
  				There might be however real fundraising going on in October 2013.<br>
  		<!-- start 057 - priority 1 - responsive design - do this first -->
- 				6. not really responsive at the moment. I must have skipped a step or two in the process.<a id="about"></a>
+ 				6. not really responsive at the moment, smartphone screen not as expected. I must have skipped a step or two in the process.<a id="about"></a>
   			</p>
   		</div>
   	</div>
