--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>UAVs Bitstarter :: v 0.58 ::</title>
+    <title>UAVs Bitstarter :: v 0.59 ::</title>
     <!-- todo1 responsive design -->
     <!-- todo2 async flow control -->
     <!-- -->
@@ -234,7 +234,8 @@
 	<div class="row-fluid section2">
   		<div class="span5 offset1 copy copy-right">
   			<p>About:<br>
-				At the moment this is only about <a href="https://www.coursera.org/course/startup">the class</a> project. My goal is to keep working on it continuously until October 2013 and help Kenneth fundraise for THE real project. His UAVs will be flying over Australian desert dropping bottled water on a target (simulating life support). Please visit postpone your donations. Current site is more of a working prototype rather then a fully featured fundraising website. We'll be fundraising for UAV elecronics, plane parts and cameras. The $3,000 is first estimate of the costs of cameras and electronics for the competition planes and will be updated when the fundraising really starts (p.ex. bill of material).
+				At the moment this is only about <a href="https://www.coursera.org/course/startup">the class</a> project. My goal is to keep working on until October 2013 and help Kenneth fundraise for THE real project. His UAVs will be flying over Australian desert dropping bottled water on a target (simulating life support). Please visit us end of September and postpone your donations. Current site is more of a working prototype rather then a fully featured fundraising website. 
+        We'll be fundraising for UAV elecronics, plane parts and cameras. The $3,000 is first estimate of material costs (cameras, electronics, plane parts). Detailed bill of material will be before the fundraising really starts.
   			</p>
   		</div>
   		<div class="span5 asset">
@@ -284,13 +285,13 @@
 	    		<div class="accordion-group">
 	    			<div class="accordion-heading">
 						  <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-						  What and when needs to be build?
+						  What and when will be bought?
 						  </a>
 		   			</div>
 		   			<div id="collapseOne" name="collapseOne" class="accordion-body collapse">
 	 					   <div class="accordion-inner">
-  						  	What: Multiple copies of an UAV carying a camera and a bottle of water - with bottle release mechanisn (multiple sets of electronics and cameras).<br>
-							   When: All I know is "October"
+  						  	What: Multiple UAVs carying a camera, electronics and a bottle of water - with bottle release mechanisn. Each vehicle will need a camera and whole set of aviation electronics..<br>
+							   When: All I know at the moment is "October". Probably after this course ends, no need to compete in the Leaderboard.
 					 	   </div>
 					   </div>
 		    	</div>
@@ -313,9 +314,17 @@
 						Why another bitcoin accepting site?
 						</a>
 					</div>
-					<div id="collapseThree" class="accordion-body collapse">
-						<div class="accordion-inner">
-							It's part of the assignment, easy to use (thx Coinbase), is a payment option with low entry barier (no SSL/bank account needed), convenient, transparent to donors, modern (resonates well with UAV).
+					  <div id="collapseThree" class="accordion-body collapse">
+						  <div class="accordion-inner">
+                Multiple reasons:
+                <ul>
+                <li>it's part of the assignment</li>
+                <li>easy to use (thx Coinbase)</li>
+                <li>low entry barier (no SSL/bank account needed)</li>
+                <li>convenient (no physical representation)</li>
+                <li>works over tcp/ip</li>
+                <li>modern (resonates well with UAV)</li>
+              </ul>
 						</div>
 					</div>
 				</div>		
