git push heroku staging:master
or something like that ;)

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>UAVs Bitstarter :: v 0.62 ::</title>
+    <title>UAVs Bitstarter</title>
     <!-- todo1 responsive design -->
     <!-- todo2 async flow control -->
-    <!-- -->
+    <!-- v3.1-->
     <!-- if you reed source code, you will find everything in the comments -->    
     <!-- -->
     <!-- fyi the bitcoin address last seen during testing -->
