--- a/index.html
+++ b/index.html
@@ -2,18 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>UAVs Bitstarter</title>
+    <title>UAV Bitstarter</title>
     <!-- todo1 responsive design -->
     <!-- todo2 async flow control -->
     <!-- v3.1-->
     <!-- if you reed source code, you will find everything in the comments -->    
-    <!-- -->
-    <!-- fyi the bitcoin address last seen during testing -->
-    <!-- will become obsolete with planned api calls for realtime accurate data -->
-    <!-- http://blockexplorer.com/address/139H9TpgZY9Y199NNaz8ZgZQ9oi7JeCrdr -->
-    <!-- https://blockchain.info/address/139H9TpgZY9Y199NNaz8ZgZQ9oi7JeCrdr -->
-    <!-- https://coinbase.com/api/doc -->
-    <!-- -->
+    <!-- 
+    this is the most complete, while still not auhtoritative, list of all addresses used for the project: 
+    139H9TpgZY9Y199NNaz8ZgZQ9oi7JeCrdr
+    1LiDptNHucM9fWCYJbczwjHVHWA6Ce3wRG
+    18Pm4JuVdy2q8kVy374Xr4fMkfA9RmWiBd
+    15SN6z8Jk9e8cFwdBrvLHSWHudTKCgijk9
+    last update 2013-08-27 11:22:00 
+    some examples of block chain exploring urls:
+    http://blockexplorer.com/address/139H9TpgZY9Y199NNaz8ZgZQ9oi7JeCrdr
+    https://blockchain.info/address/139H9TpgZY9Y199NNaz8ZgZQ9oi7JeCrdr
+    https://coinbase.com/api/doc
+    -->
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css">
     <!-- top navbar menu --><link href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css" rel="stylesheet" type="text/css">
@@ -151,7 +156,7 @@
   	</div>
   	<div class="row-fluid subheading">
   		<div class="span12">
-  			<p class="lead">Dropping bottled water in the desert, on autopilot.</p>
+  			<p class="lead">delivering bottled water in the desert, on autopilot.</p>
   		</div>
   	</div>
   	<div class="row-fluid pitch">
@@ -164,12 +169,12 @@
   				<div class="statistics">
   					<div class="span4">
   						<div class="linediv-l">
-  							<h3>5</h3><p>backers (*)</p>
+  							<h3>6</h3><p>backers (*)</p>
   						</div>
   					</div>
   					<div class="span4">
   						<div class="linediv-c">
-  							<h3>$9.5</h3><p>of $3,000</p>
+  							<h3>$10.1</h3><p>of $3,000</p>
   						</div>
   					</div>
   					<div class="span4">
@@ -182,8 +187,8 @@
   			<div class="span10 offset1">
   				<!-- progress bar -->
   				<div class="thermometer progress active">
-  					<div class="bar bar-success" style="width: 0.3%;"></div>
-  					<div class="bar bar-warning" style="width: 99.7%;"></div>
+  					<div class="bar bar-success" style="width: 0.33%;"></div>
+  					<div class="bar bar-warning" style="width: 99.67%;"></div>
   				</div>
   			</div>
 
@@ -218,11 +223,11 @@
   		</div>
   		<div class="span5 copy">
   			<p>
-          (*) actually only me, testing at debugging</p>
+          (*) might not be accurate</p>
           <p>
   				Known errors (nearterm todo items):<br>
   		<!-- branch later to develop api / async flow stuff -->
- 				<i>2. static donations status</i> (I've figured out how to make tracking bitcoin dynamic)<br>
+ 				<i>2. static donations status</i> (I've figured out how to make automatic updates to bitcoin tracking)<br>
 				<i>3. not a real fundraising page.</i> Current site's purpose is to pass the Coursera class titled "Startup engineering".<br>
  				There might be however real fundraising going on in October 2013.<br>
  		<!-- start 057 - priority 1 - responsive design - do this first -->
