stormy-castle-2027 endorsed as prod
let's occupy ot4me-bitstarter-mooc now

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
   					<span class="icon-bar"></span>
   					<span class="icon-bar"></span>
   				</button>
-  				<a class="brand" href="#">UAV Bitstarter</a>
+  				<a class="brand" href="http://stormy-temple-2027.herokuapp.com/#">UAV Bitstarter</a>
   				<div class="nav-collapse collapse">
   					<ul class="nav">
   						<li class="active"><a href="#">Home</a></li>
@@ -240,7 +240,7 @@
   		<div class="span5 offset1 copy copy-right">
   			<p>About:<br>
 				At the moment this is only about <a href="https://www.coursera.org/course/startup">the class</a> project. My goal is to keep working on until October 2013 and help Kenneth fundraise for THE real project. His UAVs will be flying over Australian desert dropping bottled water on a target (simulating life support). Current site is more of a working prototype rather then a fully featured fundraising website. <br>
-        The $3,000 is a placeholder, also first estimate of material costs (cameras, electronics, plane parts). We'll publish detailed bill of material before the fundraising really starts. Please postpone your donations and check back sometimes bebore October starts<!-- for more information-->.</p>
+        The $3,000 is a placeholder, also first estimate of material costs (cameras, electronics, plane parts). We'll publish detailed bill of material before the fundraising really starts. Please postpone your donations.<!-- for more information-->.</p>
   		</div>
   		<div class="span5 asset">
   			<img class="img-polaroid" src="http://industrial.sk/img/2.png">
@@ -295,7 +295,7 @@
 		   			<div id="collapseOne" name="collapseOne" class="accordion-body collapse">
 	 					   <div class="accordion-inner">
   						  	What: Multiple UAVs carying a camera, electronics and a bottle of water - with bottle release mechanisn. Each vehicle will need a camera and whole set of aviation electronics..<br>
-							   When: All I know at the moment is "October". Probably after this course ends, no need to compete in the Leaderboard.
+							   When: All I know at the moment is "October". Probably after this course ends, no need to compete in the Leaderboard. Tweets and backlinks are welcome to point to http://stormy-temple-2027.herokuapp.com/ which is the main landing site and the only one endorsed.
 					 	   </div>
 					   </div>
 		    	</div>
@@ -318,7 +318,7 @@
 						Why another bitcoin accepting site?
 						</a>
 					</div>
-					  <div id="collapseThree" class="accordion-body collapse">
+					  <div class="accordion-body collapse">
 						  <div class="accordion-inner">
                 Multiple reasons:
                 <ul>
@@ -329,6 +329,7 @@
                 <li>works over tcp/ip</li>
                 <li>modern (resonates well with UAV)</li>
               </ul>
+              <div id="collapseThree"></div>
 						</div>
 					</div>
 				</div>		
