--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 						Why another bitcoin accepting site?
 						</a>
 					</div>
-					  <div class="accordion-body collapse">
+					  <div id="collapseThree" class="accordion-body collapse">
 						  <div class="accordion-inner">
                 Multiple reasons:
                 <ul>
@@ -329,7 +329,7 @@
                 <li>works over tcp/ip</li>
                 <li>modern (resonates well with UAV)</li>
               </ul>
-              <div id="collapseThree"></div>
+              <div></div>
 						</div>
 					</div>
 				</div>		
