getting the math right
11.87 current coinbase balance
0.00395 % complete
properly rounded

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
   					</div>
   					<div class="span4">
   						<div class="linediv-c">
-  							<h3>$10.1</h3><p>of $3,000</p>
+  							<h3>$11.87</h3><p>of $3,000</p>
   						</div>
   					</div>
   					<div class="span4">
@@ -187,8 +187,11 @@
   			<div class="span10 offset1">
   				<!-- progress bar -->
   				<div class="thermometer progress active">
-  					<div class="bar bar-success" style="width: 0.33%;"></div>
-  					<div class="bar bar-warning" style="width: 99.67%;"></div>
+  					<div class="bar bar-success" style="width: 0.01%;"></div>
+  					<div class="bar bar-warning" style="width: 99.99%;"></div>
+            <!-- $11.87 current coinbase balance 
+                  0.00395 % complete 
+                  properly rounded-->
   				</div>
   			</div>
 
