--- a/index.html
+++ b/index.html
@@ -195,15 +195,17 @@
   				</div>
   			</div>
 
-  			<div class="span6 offset3 order">
+  			<div class="span10 offset1 order">
 				<div class="row buttons">
-					<!-- div class="span6" -->
+					<div class="span4">
           <a class="coinbase-button" data-code="bbbbf0665bf5e313c80b4c92358dab1c" data-button-style="custom_large" data-custom="donation" href="https://coinbase.com/checkouts/bbbbf0665bf5e313c80b4c92358dab1c">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
-					<!-- /div-->
+					</div>
 				</div>
-        <div class="row buttons">
+          <div class="span4" offset="1">
+              <div class="row buttons">
           <a class="coinbase-button" data-code="bb6d35d6848034511cda384f10282004" data-button-style="custom_large" data-custom="wow-callback-id" href="https://coinbase.com/checkouts/bb6d35d6848034511cda384f10282004">Subscribe With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
         </div>
+      </div>
   			</div>
 
   			<div class="span8 offset2 social">
