--- a/index.html
+++ b/index.html
@@ -195,18 +195,18 @@
   				</div>
   			</div>
 
-  			<div class="span14 offset2 order">
+  			<div class="span14 offset1 order">
 				<div class="row buttons">
-					<div class="span4">
+					<div class="span4 offset1">
           <a class="coinbase-button" data-code="bbbbf0665bf5e313c80b4c92358dab1c" data-button-style="custom_large" data-custom="donation" href="https://coinbase.com/checkouts/bbbbf0665bf5e313c80b4c92358dab1c">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
 					</div>
-          <div class="span6">
+          <div class="span6 offset1">
           <a class="coinbase-button" data-code="bb6d35d6848034511cda384f10282004" data-button-style="custom_large" data-custom="wow-callback-id" href="https://coinbase.com/checkouts/bb6d35d6848034511cda384f10282004">Subscribe With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
         </div>
       </div>
   			</div>
 
-  			<div class="span8 offset2 social">
+  			<div class="span8 offset3 social">
 				<!-- AddThis Button BEGIN -->
 				<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 				<a class="addthis_button_preferred_1"></a>
