--- a/index.html
+++ b/index.html
@@ -198,10 +198,10 @@
   			<div class="span14 offset1 order">
 				<div class="row buttons">
 					<div class="span4 offset1">
-          <a class="coinbase-button" data-code="bbbbf0665bf5e313c80b4c92358dab1c" data-button-style="custom_large" data-custom="donation" href="https://coinbase.com/checkouts/bbbbf0665bf5e313c80b4c92358dab1c">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+          <a class="coinbase-button" data-code="bbbbf0665bf5e313c80b4c92358dab1c" data-button-style="custom_small" data-custom="donation" href="https://coinbase.com/checkouts/bbbbf0665bf5e313c80b4c92358dab1c">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
 					</div>
           <div class="span6 offset1">
-          <a class="coinbase-button" data-code="bb6d35d6848034511cda384f10282004" data-button-style="custom_large" data-custom="wow-callback-id" href="https://coinbase.com/checkouts/bb6d35d6848034511cda384f10282004">Subscribe With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+          <a class="coinbase-button" data-code="bb6d35d6848034511cda384f10282004" data-button-style="custom_small" data-custom="wow-callback-id" href="https://coinbase.com/checkouts/bb6d35d6848034511cda384f10282004">Subscribe With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
         </div>
       </div>
   			</div>
