--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- if you reed source code, you will find everything in the comments -->    
     <!-- 
     this is the most complete, while still not auhtoritative, list of all addresses used for the project: 
+    17P3fXbJwroibsdsf8L9Bxydzw8Hmwipaa
     139H9TpgZY9Y199NNaz8ZgZQ9oi7JeCrdr
     1LiDptNHucM9fWCYJbczwjHVHWA6Ce3wRG
     18Pm4JuVdy2q8kVy374Xr4fMkfA9RmWiBd
@@ -196,14 +197,14 @@
   			</div>
 
   			<div class="span10 offset1 order">
-				<div class="row buttons">
-					<div class="span4 offset1">
-          <a class="coinbase-button" data-code="bbbbf0665bf5e313c80b4c92358dab1c" data-button-style="custom_small" data-custom="donation" href="https://coinbase.com/checkouts/bbbbf0665bf5e313c80b4c92358dab1c">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
-					</div>
-          <div class="span6 offset1">
-          <a class="coinbase-button" data-code="bb6d35d6848034511cda384f10282004" data-button-style="custom_small" data-custom="wow-callback-id" href="https://coinbase.com/checkouts/bb6d35d6848034511cda384f10282004">Subscribe With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
-        </div>
-      </div>
+  				<div class="row buttons">
+  					<div class="span4 offset1">
+              <a class="coinbase-button" data-code="bbbbf0665bf5e313c80b4c92358dab1c" data-button-style="custom_small" data-custom="donation" href="https://coinbase.com/checkouts/bbbbf0665bf5e313c80b4c92358dab1c">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+  					</div>
+            <!-- div class="span6 offset1">
+              <a class="coinbase-button" data-code="bb6d35d6848034511cda384f10282004" data-button-style="custom_small" data-custom="wow-callback-id" href="https://coinbase.com/checkouts/bb6d35d6848034511cda384f10282004">Subscribe With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+            </div-->
+          </div>
   			</div>
 
   			<div class="span8 offset3 social">
