--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
   	</div>
   	<div class="row-fluid pitch">
   		<div class="span5 offset1 video">
-  			<img class="img-polaroid" src="http://industrial.sk/img/3.png">
+  			<img class="img-polaroid" src="http://industrial.sk/img/TechPod2.png">
   		</div>
   		<!-- new actions div to contain statistics, order, and share buttons -->
   		<div class="span5 actions">
@@ -226,7 +226,7 @@
 
   	<div class="row-fluid section1">
   		<div class="span5 offset1 asset">
-  			<img class="img-polaroid" src="http://industrial.sk/img/1.png">
+  			<img class="img-polaroid" src="http://industrial.sk/img/TechPod4.png">
   		</div>
   		<div class="span5 copy">
   			<p>
@@ -250,13 +250,13 @@
         The $3,000 is a placeholder, also first estimate of material costs (cameras, electronics, plane parts). We'll publish detailed bill of material before the fundraising really starts. Please postpone your donations.<!-- for more information-->.</p>
   		</div>
   		<div class="span5 asset">
-  			<img class="img-polaroid" src="http://industrial.sk/img/2.png">
+  			<img class="img-polaroid" src="http://industrial.sk/img/TechPod3.png">
   		</div>
   	</div>
 
   	<div class="row-fluid section3">
   		<div class="span5 offset1 asset">
-  			<img class="img-polaroid" src="http://industrial.sk/img/3.png">
+  			<img class="img-polaroid" src="http://industrial.sk/img/2.png">
   		</div>
   		<div class="span5 copy">
   			<p>
@@ -284,7 +284,7 @@
   			</p>
   		</div>
   		<div class="span5 asset">
-  			<img class="img-polaroid" src="http://industrial.sk/img/1.png">
+  			<img class="img-polaroid" src="http://industrial.sk/img/TechPod1.png">
   		</div>
   	</div>
 
