uhm wide image (asset in area 4)

--- a/index.html
+++ b/index.html
@@ -275,16 +275,22 @@
   	</div>
 
   	<div class="row-fluid section4">
-  		<div class="span5 offset1 copy copy-right">
+  		<!--div class="span5 offset1 copy copy-right">
   			<p><a id="contact"></a>
   				Contact:<br>
   				<a href="http://www.hackerspace.lu/">meet us</a> in Strassen, Luxembourg<br>
   				twitter<br>
   				todo: add pgp/email, skype & co. <a id="faq"></a>
   			</p>
-  		</div>
-  		<div class="span5 asset">
+  		</div -->
+  		<div class="span10 asset">
   			<img class="img-polaroid" src="http://industrial.sk/img/TechPod1.png">
+        <p><a id="contact"></a>
+          Contact:<br>
+          <a href="http://www.hackerspace.lu/">meet us</a> in Strassen, Luxembourg<br>
+          twitter<br>
+          todo: add pgp/email, skype & co. <a id="faq"></a>
+        </p>
   		</div>
   	</div>
 
