--- a/index.html
+++ b/index.html
@@ -274,8 +274,9 @@
   		</div>
   	</div>
 
-  	<div class="row-fluid section4">
-  		<!--div class="span5 offset1 copy copy-right">
+    <div class="row-fluid section4">
+  	<!--div class="row-fluid section4">
+  		<div class="span5 offset1 copy copy-right">
   			<p><a id="contact"></a>
   				Contact:<br>
   				<a href="http://www.hackerspace.lu/">meet us</a> in Strassen, Luxembourg<br>
@@ -283,7 +284,7 @@
   				todo: add pgp/email, skype & co. <a id="faq"></a>
   			</p>
   		</div -->
-  		<div class="span10 asset">
+  		<div class="span10 offset1 asset">
   			<img class="img-polaroid" src="http://industrial.sk/img/TechPod1.png">
         <p><a id="contact"></a>
           Contact:<br>
