layout changes after new images introduced

--- a/index.html
+++ b/index.html
@@ -220,24 +220,29 @@
 				<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
 				<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-52150be84701e744"></script>
 				<!-- AddThis Button END -->
+        <p>(*) might not be accurate</p>
   			</div>
   		</div>
   	</div>
+
+    <div class="row-fluid section">
+      <div class="span10 offset1 asset">
+        <img class="img-polaroid" src="http://industrial.sk/img/TechPod1.png">
+      </div>
+    </div>
 
   	<div class="row-fluid section1">
   		<div class="span5 offset1 asset">
   			<img class="img-polaroid" src="http://industrial.sk/img/TechPod4.png">
   		</div>
   		<div class="span5 copy">
-  			<p>
-          (*) might not be accurate</p>
           <p>
   				Known errors (nearterm todo items):<br>
   		<!-- branch later to develop api / async flow stuff -->
  				<i>2. static donations status</i> (I've figured out how to make automatic updates to bitcoin tracking)<br>
 				<i>3. not a real fundraising page.</i> Current site's purpose is to pass the Coursera class titled "Startup engineering".<br>
  				There might be however real fundraising going on in October 2013.<br>
- 		<!-- start 057 - priority 1 - responsive design - do this first -->
+ 		<!-- priority 1 - responsive design - do this first -->
  				6. not really responsive at the moment, smartphone screen not as expected. I must have skipped a step or two in the process.<a id="about"></a>
   			</p>
   		</div>
@@ -271,27 +276,12 @@
 				<a href="http://en.wikipedia.org/wiki/Category:Web_hosting">hosting</a>;<br>
 				<a href="http://www.bu.edu/me/people/adjunct-research-visiting-and-associated-faculty/kenneth-sebesta/">Kenn</a> for the idea for this project<br>and <a href="http://www.openpilot.org">Open Pilot</a> for images used here.
   			</p>
-  		</div>
-  	</div>
-
-    <div class="row-fluid section4">
-  	<!--div class="row-fluid section4">
-  		<div class="span5 offset1 copy copy-right">
-  			<p><a id="contact"></a>
-  				Contact:<br>
-  				<a href="http://www.hackerspace.lu/">meet us</a> in Strassen, Luxembourg<br>
-  				twitter<br>
-  				todo: add pgp/email, skype & co. <a id="faq"></a>
-  			</p>
-  		</div -->
-  		<div class="span10 offset1 asset">
-  			<img class="img-polaroid" src="http://industrial.sk/img/TechPod1.png">
         <p><a id="contact"></a>
           Contact:<br>
           <a href="http://www.hackerspace.lu/">meet us</a> in Strassen, Luxembourg<br>
           twitter<br>
           todo: add pgp/email, skype & co. <a id="faq"></a>
-        </p>
+        </p>        
   		</div>
   	</div>
 
