new images done

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700," rel="stylesheet" type="text/css">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" rel="stylesheet">
-    <link href="https://d396qusza40orc.cloudfron.net/startup%2Fcode%2Fsocial-buttons.css" rel="stylesheet">
+    <link href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css" rel="stylesheet">
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
     <style type="text/css">
@@ -155,11 +155,19 @@
   			</div>
   		</div>
   	</div>
+    
   	<div class="row-fluid subheading">
   		<div class="span12">
   			<p class="lead">delivering bottled water in the desert, on autopilot.</p>
   		</div>
   	</div>
+
+    <div class="row-fluid section">
+      <div class="span10 offset1 asset">
+        <img class="img-polaroid" src="http://industrial.sk/img/TechPod1.png">
+      </div>
+    </div>
+
   	<div class="row-fluid pitch">
   		<div class="span5 offset1 video">
   			<img class="img-polaroid" src="http://industrial.sk/img/TechPod2.png">
@@ -224,12 +232,6 @@
   			</div>
   		</div>
   	</div>
-
-    <div class="row-fluid section">
-      <div class="span10 offset1 asset">
-        <img class="img-polaroid" src="http://industrial.sk/img/TechPod1.png">
-      </div>
-    </div>
 
   	<div class="row-fluid section1">
   		<div class="span5 offset1 asset">
