--- a/index.html
+++ b/index.html
@@ -229,7 +229,9 @@
 				<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-52150be84701e744"></script>
 				<!-- AddThis Button END -->
   			</div>
-        <p>(*) might not be accurate</p>
+        <div class="span5 copy">
+          <p>(*) might not be accurate</p>
+        </div>
   		</div>
   	</div>
 
