--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
 				<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-52150be84701e744"></script>
 				<!-- AddThis Button END -->
   			</div>
-        <div class="span5 copy">
-          <p>(*) might not be accurate</p>
+        <div class="span12">
+          <p><font color="white">(*) might not be accurate</font></p>
         </div>
   		</div>
   	</div>
