--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 				<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-52150be84701e744"></script>
 				<!-- AddThis Button END -->
   			</div>
-        <div class="span12">
+        <div class="span8 offset3">
           <p><font color="white">(*) might not be accurate</font></p>
         </div>
   		</div>
