offset migt not be accurate

--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
 				<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-52150be84701e744"></script>
 				<!-- AddThis Button END -->
   			</div>
-        <div class="span8 offset3">
-          <p><font color="white">(*) might not be accurate</font></p>
+        <div class="span6 offset4">
+          <p><br><font color="white">(*) might not be accurate</font></p>
         </div>
   		</div>
   	</div>
