social buzz ref url

--- a/index.html
+++ b/index.html
@@ -247,7 +247,8 @@
 				<i>3. not a real fundraising page.</i> Current site's purpose is to pass the Coursera class titled "Startup engineering".<br>
  				There might be however real fundraising going on in October 2013.<br>
  		<!-- priority 1 - responsive design - do this first -->
- 				6. not really responsive at the moment, smartphone screen not as expected. I must have skipped a step or two in the process.<a id="about"></a>
+ 				6. not really responsive at the moment, smartphone screen view not as expected. I must have skipped a step or two in the process.<a id="about"></a><br>
+        8. social buzz counter - different results when viewded at http://stormy-temple-2027.herokuapp.com/ and http://9to5passion.eu (http referrer url issue probably)
   			</p>
   		</div>
   	</div>
@@ -265,7 +266,7 @@
 
   	<div class="row-fluid section3">
   		<div class="span5 offset1 asset">
-  			<img class="img-polaroid" src="http://industrial.sk/img/2.png">
+  			<img class="img-polaroid" src="http://industrial.sk/img/4.png">
   		</div>
   		<div class="span5 copy">
   			<p>
@@ -330,18 +331,33 @@
 						  <div class="accordion-inner">
                 Multiple reasons:
                 <ul>
-                <li>it's part of the assignment</li>
-                <li>easy to use (thx Coinbase)</li>
-                <li>low entry barier (no SSL/bank account needed)</li>
-                <li>convenient (no physical representation)</li>
                 <li>works over tcp/ip</li>
+                <li>ideal internet money (bitcoin has no physical representation)</li>
                 <li>modern (resonates well with UAV)</li>
+                <li>it's part of the assignment</li>
+                <li>easy to use (thx Coinbase and others)</li>
+                <li>low entry barier (no bank account needed, no SSL certificates required to implement payments)</li>
               </ul>
               <div></div>
 						</div>
 					</div>
 				</div>		
-        <!-- aand it's gone 049
+        <!-- repetitive area start -->
+          <!--<div class="accordion-group">
+            <div class="accordion-heading">
+              <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseEnum">
+              Question?
+              </a>
+            </div>
+            <div id="collapseEnum" class="accordion-body collapse">
+               <div class="accordion-inner">
+                Answer.
+               </div>
+             </div>
+          </div>-->
+        <!-- repetitive area end -->
+
+        <!-- aand it's gone - hiding fixed known errors
 				<div class="accordion-group">
 	    			<div class="accordion-heading">
 						<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFive">
@@ -354,10 +370,10 @@
 			 				4. page ... loads ... - loading less external stuff at page first load [<strike>really ... slowly ... (needs speedup).</strike>]<br>
 			 				5. transparent list of donations <strike>missing link to bitcoin blockchain 'single address' and an overview of donations.</strike> obsolete<br>
 			 				7. GA installed - not tested yet; credentials to be used to login and use GA [<strike>google analytics missing</strike>]
+              9. BIP0032 deterministic wallets, master public key seed and https://github.com/prusnak/addrgen as alternative to manage bitcoin donations.
 						</div>
 					</div>
-				</div>		
-				comment end 049 -->
+				</div>-->
 			</div>
 		</div>
 	</div>
