--- a/index.html
+++ b/index.html
@@ -329,10 +329,9 @@
 					</div>
 					  <div id="collapseThree" class="accordion-body collapse">
 						  <div class="accordion-inner">
-                Multiple reasons:
                 <ul>
                 <li>works over tcp/ip</li>
-                <li>ideal internet money (bitcoin has no physical representation)</li>
+                <li>ideal internet money (no need to handle any physical representation ever)</li>
                 <li>modern (resonates well with UAV)</li>
                 <li>it's part of the assignment</li>
                 <li>easy to use (thx Coinbase and others)</li>
