--- a/index.html
+++ b/index.html
@@ -256,8 +256,8 @@
 	<div class="row-fluid section2">
   		<div class="span5 offset1 copy copy-right">
   			<p>About:<br>
-				At the moment this is only about <a href="https://www.coursera.org/course/startup">the class</a> project. My goal is to keep working on until October 2013 and help Kenneth fundraise for THE real project. His UAVs will be flying over Australian desert dropping bottled water on a target (simulating life support). Current site is more of a working prototype rather then a fully featured fundraising website. <br>
-        The $3,000 is a placeholder, also first estimate of material costs (cameras, electronics, plane parts). We'll publish detailed bill of material before the fundraising really starts. Please postpone your donations.<!-- for more information-->.</p>
+				At the moment this is only about <a href="https://www.coursera.org/course/startup">the class</a> project. My goal is to keep working on and eventually turn it into a fundraising site for the real project. Kenn's UAVs will be flying over Australian desert dropping bottled water on a target (simulating life support).<br>
+        The $3,000 is a placeholder and also first estimate of material costs (cameras, aviation electronics, plane parts). We'll publish detailed bill of material before the fundraising really starts. Please postpone your donations.<!-- for more information-->.</p>
   		</div>
   		<div class="span5 asset">
   			<img class="img-polaroid" src="http://industrial.sk/img/TechPod4.png">
