open pilot link gone

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 	<div class="row-fluid section2">
   		<div class="span5 offset1 copy copy-right">
   			<p>About:<br>
-				At the moment this is only about <a href="https://www.coursera.org/course/startup">the class</a> project. My goal is to keep working on and eventually turn it into a fundraising site for the real project. Kenn's UAVs will be flying over Australian desert dropping bottled water on a target (simulating life support).<br>
+				At the moment this is only about <a href="https://www.coursera.org/course/startup">the class</a> project. My goal is to keep working on it and eventually turn it into a fundraising site for the real project. <a href="http://www.bu.edu/me/people/adjunct-research-visiting-and-associated-faculty/kenneth-sebesta/">Kenn</a>'s UAVs will be flying over Australian desert dropping bottled water on a target (simulating life support).<br>
         The $3,000 is a placeholder and also first estimate of material costs (cameras, aviation electronics, plane parts). We'll publish detailed bill of material before the fundraising really starts. Please postpone your donations.<!-- for more information-->.</p>
   		</div>
   		<div class="span5 asset">
@@ -279,7 +279,7 @@
 				<a href="http://www.quantumkiwi.com/">quantumkiwi</a> and
 				<a href="https://digmia.com/">digmia</a> for 
 				<a href="http://en.wikipedia.org/wiki/Category:Web_hosting">hosting</a>;<br>
-				<a href="http://www.bu.edu/me/people/adjunct-research-visiting-and-associated-faculty/kenneth-sebesta/">Kenn</a> for the idea for this project<br>and <a href="http://www.openpilot.org">Open Pilot</a> for images used here.
+				and <a href="http://www.bu.edu/me/people/adjunct-research-visiting-and-associated-faculty/kenneth-sebesta/">Kenn</a> for the idea for this project.
   			</p>
         <p><a id="contact"></a>
           Contact:<br>
