commenting on issue #8

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
  				There might be however real fundraising going on in October 2013.<br>
  		<!-- priority 1 - responsive design - do this first -->
  				6. not really responsive at the moment, smartphone screen view not as expected. I must have skipped a step or two in the process.<a id="about"></a><br>
-        8. social buzz counter - different results when viewded at http://stormy-temple-2027.herokuapp.com/ and http://9to5passion.eu (http referrer url issue probably)
+        8. social buzz counter - http referrer url issue probably
   			</p>
   		</div>
   	</div>
@@ -369,6 +369,7 @@
 			 				4. page ... loads ... - loading less external stuff at page first load [<strike>really ... slowly ... (needs speedup).</strike>]<br>
 			 				5. transparent list of donations <strike>missing link to bitcoin blockchain 'single address' and an overview of donations.</strike> obsolete<br>
 			 				7. GA installed - not tested yet; credentials to be used to login and use GA [<strike>google analytics missing</strike>]
+              8. different results when viewded at http://stormy-temple-2027.herokuapp.com/ and http://9to5passion.eu
               9. BIP0032 deterministic wallets, master public key seed and https://github.com/prusnak/addrgen as alternative to manage bitcoin donations.
 						</div>
 					</div>
