new issue - keyboard hijacking

--- a/index.html
+++ b/index.html
@@ -248,7 +248,8 @@
  				There might be however real fundraising going on in October 2013.<br>
  		<!-- priority 1 - responsive design - do this first -->
  				6. not really responsive at the moment, smartphone screen view not as expected. I must have skipped a step or two in the process.<a id="about"></a><br>
-        8. social buzz counter - http referrer url issue probably
+        8. social buzz counter - http referrer url issue probably<br>
+        11. keyboard hijacking after viewing this site (workaround for this: close the browser tab)
   			</p>
   		</div>
   	</div>
@@ -371,6 +372,7 @@
 			 				7. GA installed - not tested yet; credentials to be used to login and use GA [<strike>google analytics missing</strike>]
               8. different results when viewded at http://stormy-temple-2027.herokuapp.com/ and http://9to5passion.eu
               9. BIP0032 deterministic wallets, master public key seed and https://github.com/prusnak/addrgen as alternative to manage bitcoin donations.
+              10. copyright of images, previously borrowed from openpilot project, now using pictures from a video I shot myself and Kenn grabbed stil images from the video.
 						</div>
 					</div>
 				</div>-->
