--- a/index.html
+++ b/index.html
@@ -230,34 +230,16 @@
 				<!-- AddThis Button END -->
   			</div>
         <div class="span6 offset4">
-          <p><br><font color="white">(*) might not be accurate</font></p>
+          <p><br><font color="white">(*) might not be accurate</font><a id="about"></a></p>
         </div>
-  		</div>
-  	</div>
-
-  	<div class="row-fluid section1">
-  		<div class="span5 offset1 asset">
-  			<img class="img-polaroid" src="http://industrial.sk/img/TechPod3.png">
-  		</div>
-  		<div class="span5 copy">
-          <p>
-  				Known errors (nearterm todo items):<br>
-  		<!-- branch later to develop api / async flow stuff -->
- 				<i>2. static donations status</i> (I've figured out how to make automatic updates to bitcoin tracking)<br>
-				<i>3. not a real fundraising page.</i> Current site's purpose is to pass the Coursera class titled "Startup engineering".<br>
- 				There might be however real fundraising going on in October 2013.<br>
- 		<!-- priority 1 - responsive design - do this first -->
- 				6. not really responsive at the moment, smartphone screen view not as expected. I must have skipped a step or two in the process.<a id="about"></a><br>
-        8. social buzz counter - http referrer url issue probably<br>
-        11. keyboard hijacking after viewing this site (workaround for this: close the browser tab)
-  			</p>
   		</div>
   	</div>
 
 	<div class="row-fluid section2">
   		<div class="span5 offset1 copy copy-right">
   			<p>About:<br>
-				At the moment this is only about <a href="https://www.coursera.org/course/startup">the class</a> project. My goal is to keep working on it and eventually turn it into a fundraising site for the real project. <a href="http://www.bu.edu/me/people/adjunct-research-visiting-and-associated-faculty/kenneth-sebesta/">Kenn</a>'s UAVs will be flying over Australian desert dropping bottled water on a target (simulating life support).<br>
+				At the moment this is only about <a href="https://www.coursera.org/course/startup">the class</a> project. My goal is to keep working on it and eventually turn it into a fundraising site for the real project. <a href="http://www.bu.edu/me/people/adjunct-research-visiting-and-associated-faculty/kenneth-sebesta/">Kenn</a>'s UAVs will be flying over Australian desert dropping bottled water on a target (simulating life support) and need to be build.<br>
+        There might be real fundraising going on in October 2013.<br>
         The $3,000 is a placeholder and also first estimate of material costs (cameras, aviation electronics, plane parts). We'll publish detailed bill of material before the fundraising really starts. Please postpone your donations.<!-- for more information-->.</p>
   		</div>
   		<div class="span5 asset">
@@ -356,26 +338,6 @@
              </div>
           </div>-->
         <!-- repetitive area end -->
-
-        <!-- aand it's gone - hiding fixed known errors
-				<div class="accordion-group">
-	    			<div class="accordion-heading">
-						<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFive">
-						List of closed issues
-						</a>
-					</div>
-					<div id="collapseFive" class="accordion-body collapse">
-						<div class="accordion-inner">
-							1. bitcoin button - was in issue with dns forwarding and domain configuration - [<strike>1. bitcoin button does not work at 9to5passion.eu; works now as expected <a href="http://ec2-54-213-56-229.us-west-2.compute.amazonaws.com:8080/">staging</a> and <a href="http://stormy-temple-2027.herokuapp.com/">production</a> respectively</strike>]<br> 
-			 				4. page ... loads ... - loading less external stuff at page first load [<strike>really ... slowly ... (needs speedup).</strike>]<br>
-			 				5. transparent list of donations <strike>missing link to bitcoin blockchain 'single address' and an overview of donations.</strike> obsolete<br>
-			 				7. GA installed - not tested yet; credentials to be used to login and use GA [<strike>google analytics missing</strike>]
-              8. different results when viewded at http://stormy-temple-2027.herokuapp.com/ and http://9to5passion.eu
-              9. BIP0032 deterministic wallets, master public key seed and https://github.com/prusnak/addrgen as alternative to manage bitcoin donations.
-              10. copyright of images, previously borrowed from openpilot project, now using pictures from a video I shot myself and Kenn grabbed stil images from the video.
-						</div>
-					</div>
-				</div>-->
 			</div>
 		</div>
 	</div>
