--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>UAV Bitstarter</title>
     <!-- todo1 responsive design -->
     <!-- todo2 async flow control -->
-    <!-- v3.1-->
-    <!-- if you reed source code, you will find everything in the comments -->    
-    <!-- 
+    <!-- v3.1
+    if you reed source code, you will find everything in the comments  
+    issues on github are enabled. not sure how to link to github though to avoid code sharing ;)
     this is the most complete, while still not auhtoritative, list of all addresses used for the project: 
     17P3fXbJwroibsdsf8L9Bxydzw8Hmwipaa
     139H9TpgZY9Y199NNaz8ZgZQ9oi7JeCrdr
@@ -260,7 +260,7 @@
 				<a href="http://heroku.com/">heroku</a>, 
 				<a href="http://aws.amazon.com/">amazon</a>, 
 				<a href="http://www.quantumkiwi.com/">quantumkiwi</a> and
-				<a href="https://digmia.com/">digmia</a> for 
+				<a href="http://digmia.com/">digmia</a> for 
 				<a href="http://en.wikipedia.org/wiki/Category:Web_hosting">hosting</a>;<br>
 				and <a href="http://www.bu.edu/me/people/adjunct-research-visiting-and-associated-faculty/kenneth-sebesta/">Kenn</a> for the idea for this project.
   			</p>
