--- a/index.html
+++ b/index.html
@@ -238,9 +238,10 @@
 	<div class="row-fluid section2">
   		<div class="span5 offset1 copy copy-right">
   			<p>About:<br>
-				At the moment this is only about <a href="https://www.coursera.org/course/startup">the class</a> project. My goal is to keep working on it and eventually turn it into a fundraising site for the real project. <a href="http://www.bu.edu/me/people/adjunct-research-visiting-and-associated-faculty/kenneth-sebesta/">Kenn</a>'s UAVs will be flying over Australian desert dropping bottled water on a target (simulating life support) and need to be build.<br>
-        There might be real fundraising going on in October 2013.<br>
-        The $3,000 is a placeholder and also first estimate of material costs (cameras, aviation electronics, plane parts). We'll publish detailed bill of material before the fundraising really starts. Please postpone your donations.<!-- for more information-->.</p>
+				What started only as <a href="https://www.coursera.org/course/startup">class</a> project is evolving to a bitcoin fundraising site. My goal is to keep working on it and adding content to it while turning it into a fully featured fundraising site for the real project. <a href="http://www.bu.edu/me/people/adjunct-research-visiting-and-associated-faculty/kenneth-sebesta/">Kenn</a>'s UAVs will be flying over Australian desert dropping bottled water on a target (simulating life support) and need to be build.<br>
+        Fundraising should peak in October 2013. As early buzz won't hurt, please preview herewith the project site.<br>
+        The $3,000 is a placeholder and also first estimate of material costs (cameras, aviation electronics, plane parts). We'll publish detailed bill of material before the fundraising really starts. Please postpone your donations or donate for the water in desert delivery cause on bitstarter.<br>
+        There are no tiers of support, just pick a value or enter your own and send us a token of your appreciation.<!-- for more information-->.</p>
   		</div>
   		<div class="span5 asset">
   			<img class="img-polaroid" src="http://industrial.sk/img/TechPod4.png">
@@ -287,7 +288,10 @@
 		   			<div id="collapseOne" name="collapseOne" class="accordion-body collapse">
 	 					   <div class="accordion-inner">
   						  	What: Multiple UAVs carying a camera, electronics and a bottle of water - with bottle release mechanisn. Each vehicle will need a camera and whole set of aviation electronics..<br>
-							   When: All I know at the moment is "October". Probably after this course ends, no need to compete in the Leaderboard. Tweets and backlinks are welcome to point to http://stormy-temple-2027.herokuapp.com/ which is the main landing site and the only one endorsed.
+							   When: All I know at the moment is "October". <br>
+                 The plane in the pictures is the current prototype (making aerial pictures, testing antennas, gathering raw data). Firmware is TauLabs fork of openpilot<br>
+                Tweets and backlinks are welcome. please use http://9to5passion.eu which is tracked by the leaderboard scoring system and is the main landing sites.<br>
+                 According to another theory the fundraising already started and will be relaunched every two weeks to keep it interesting.<br>
 					 	   </div>
 					   </div>
 		    	</div>
@@ -300,7 +304,7 @@
 					</div>
 					<div id="collapseTwo" name="collapseTwo" class="accordion-body collapse">
 						<div class="accordion-inner">
-							It will be looking for a man sized figurine wearing yellow shirt and blue trousers (in the desert) and once identified, it will drop the bottle of water as close to it as possible (water must land within 100 meters of the target, preferably closer).
+							It will take off, fly over the desert and will be looking for a man sized figurine wearing yellow shirt and blue trousers. Once the target is identified, it will drop the bottle of water as close to it as possible (water must land within 100 meters of the target, preferably closer) and must return to the starting point. This is the reason of delivery by plane instead of a quadcopter like vehicle. 
 						</div>
 					</div>
 				</div>
